--- a/nginx.conf
+++ b/nginx.conf
@@ -23,7 +23,7 @@ http {
     server_names_hash_bucket_size 128;
     # server_name_in_redirect off;
 
-    client_max_body_size   16m;  # default: 1m
+    # client_max_body_size   1m;
     client_body_temp_path  /var/spool/nginx/client_temp 1 2;
 
     include /etc/nginx/mime.types;
@@ -52,13 +52,6 @@ http {
     # gzip_buffers 16 8k;
     # gzip_http_version 1.1;
 
-    ##
-    # nginx-naxsi config
-    ##
-    # Uncomment it if you installed nginx-naxsi
-    ##
-
-    #include /etc/nginx/naxsi_core.rules;
 
     ##
     # SSL config
@@ -84,9 +77,8 @@ http {
 
 
     ##
-    # Virtual Host Configs
+    # Includes
     ##
 
     include /etc/nginx/conf.d/*.conf;
-    include /etc/nginx/sites-enabled/*;
 }
