Add Google secondary DNS server

--- a/nginx.conf
+++ b/nginx.conf
@@ -72,7 +72,7 @@ http {
     ssl_stapling         on;
     ssl_stapling_verify  on;
 
-    resolver          8.8.8.8;
+    resolver          8.8.8.8 8.8.4.4;
     resolver_timeout  5s;
 
 
