Add NGINX_CONFIG environment variable

--- a/nginx.conf
+++ b/nginx.conf
@@ -75,6 +75,13 @@ http {
     resolver          8.8.8.8 8.8.4.4;
     resolver_timeout  5s;
 
+{% if NGINX_CONFIG is defined %}
+    ##
+    # Extra configuration from NGINX_CONFIG
+    ##
+
+    {{ NGINX_CONFIG }}
+{% endif %}
 
     ##
     # Includes
