Set resolver to 127.0.0.11 by default

--- a/nginx.conf
+++ b/nginx.conf
@@ -72,7 +72,7 @@ http {
     ssl_stapling         on;
     ssl_stapling_verify  on;
 
-    resolver          8.8.8.8 8.8.4.4;
+    resolver          {% if NGINX_RESOLVER is defined %}{{ NGINX_RESOLVER }}{% else %}127.0.0.11{% endif %};
     resolver_timeout  5s;
 
 {% if NGINX_CONFIG is defined %}
