Revert the move of /nginx_status to port 80

--- a/status.conf
+++ b/status.conf
@@ -1,12 +1,8 @@
 server {
-	listen  localhost:80;
+	listen  81;
 
 	location /nginx_status {
 		stub_status  on;
-
 		access_log  off;
-
-		allow  127.0.0.1;
-		deny   all;
 	}
 }
